--- a/client/src/app/database/schema-tree/schema-tree.scss
+++ b/client/src/app/database/schema-tree/schema-tree.scss
@@ -1,5 +1,7 @@
 app-schema-tree {
   overflow: auto;
+  display: flex;
+  flex-direction: column;
 
   .selected {
     background-color: var(--mat-sys-on-surface);
